# bright-chat

./: .env.example  .env.rag  .gitignore  .rules.md  AGENT_API_COMPLETE.md  AGENT_MODULE_COMPLETE_REPORT.md  API接口文档.md  CHANGELOG.md  CHROMADB_FINAL_SUMMARY.md  CHROMADB_FIX_IMPLEMENTATION_REPORT.md  CHROMADB_OPTIMIZATION_GUIDE.md  CHROMADB_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_FIX_SUMMARY.md  DATABASE_INITIALIZATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCS_INDEX.md  FRONTEND_BACKEND_INTEGRATION_REPORT.md  INTEGRATION_TEST_SUCCESS.md  KNOWLEDGE_API_COMPLETE.md  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  PROGRESS.md  README.md  START.md  browser_test.js  check-services.sh  check_llm_models.py  deploy-on-server.sh  deploy-to-remote.sh  deploy.sh  docker-compose.yml  frontend_test_plan.md  md-organizer.skill  run_agent_acceptance_tests.sh  start-local.sh  start_all.sh  (+6 more)
backend-python/: .dockerignore  Dockerfile  Dockerfile.buildkit  Dockerfile.optimized  INTERFACE_TEST_REPORT.md  README.md  build.sh  check_services.sh  cleanup-docker.sh  clear_knowledge_test_data.py  comprehensive_interface_test.py  comprehensive_test.py  create_admin.py  create_agent_tables.py  create_docker_tables.py  create_rag_tables.py  create_test_agent.py  diagnose_agent_issue.py  diagnose_chunks_count.py  diagnose_frontend.py  diagnose_network.py  diagnose_server.py  diagnose_upload_issue.py  docker-compose.yml  download_bgemodel.py  download_model.py  e2e_test.py  execute_agent_fields_migration.py  execute_group_id_migration.py  execute_migration.py  final_validation_test.py  fix_admin_password.py  fix_chromadb.py  fix_file_type_column.py  fix_llm_reasoner.py  force_create_tables.py  gen_hash.py  init_database.py  integration_test.py  make_group_id_nullable_simple.py  (+45 more)
backend-python/app/: __init__.py  main.py
backend-python/config/: .env.example  settings.yaml
backend-python/migrations/: add_agent_fields.sql  add_agent_id_to_sessions.sql  add_api_format.sql  add_llm_model_id_to_agents.sql  add_provider_system.sql  add_reasoning_persistence.sql  alembic.ini  env.py  fix_file_type_length.sql  make_group_id_nullable.sql
backend-python/tests/: mocks.py  (+17 more)
(+168 files in other folders)
